<resources>
    <!--Layout-->
    <string name="app_name">LangToSQL Lite</string>
    <string name="title_run">Run</string>
    <string name="title_maps">Maps</string>
    <string name="title_config">Config</string>
    <string name="hint_send">Request…</string>
    <string name="hint_run">Query…</string>
    <string name="hint_file">SQLite database file…</string>
    <string name="title_db">Database settings</string>
    <string name="title_ai">AI settings</string>
    <string name="hint_ip">IP Address…</string>
    <string name="hint_port">Port…</string>
    <string name="radio_SQLite">Use local SQLite database file</string>
    <string name="radio_API">Use LangToSQL REST API</string>
    <string name="radio_Gemini">Use Gemini API</string>
    <string name="radio_LLM">Use LLM local server</string>
    <string name="hint_key">API Key…</string>
    <string name="show_key">Show API Key</string>
    <string name="hint_model">Model…</string>
    <string name="text_nodb">No database selected.</string>
    <string name="check_show">Show advanced run query fields</string>
    <string name="title_currentdb">Current database</string>
    <string name="title_theme">Theme</string>
    <string name="radio_system">Use the device theme</string>
    <string name="radio_clear">Clear theme</string>
    <string name="radio_dark">Dark theme</string>
    <string name="title_support">Support</string>
    <string name="link_issue">● Report a bug on the official Issues Tracker.</string>
    <string name="link_api">● See the documentation of the LangToSQL REST API.</string>
    <string name="link_github">● Check the source code on Github.</string>
    <string name="link_mail">● Contact with me through this email.</string>
    <string-array name="spinner_items">
        <item>3.8-flash</item>
        <item>3.5-flash</item>
        <item>3.5-flash-lite</item>
        <item>2.5-flash</item>
        <item>2.5-flash-lite</item>
    </string-array>
    <!--Run-->
    <string name="text_result">Send a query to get a result table.</string>
    <string name="error_load_sqlite">The configured SQLite database doesn\'t exist.</string>
    <string name="error_load_io">Failed to access the configured SQLite database.</string>
    <string name="error_load_prior">The prior result couldn\'t be loaded.</string>
    <string name="text_generate">Generating…</string>
    <string name="error_ai">The AI request couldn\'t be built because of an error.</string>
    <string name="error_ai_format">The AI\'s answer is not compatible with Gemini or LLM.</string>
    <string name="error_ai_available">The AI server is not available.</string>
    <string name="error_ai_ask">An error occurred when asking the AI.</string>
    <string name="error_api_format">The REST API\'s response couldn\'t be interpreted.</string>
    <string name="error_api_code">The REST API returned error code </string>
    <string name="error_api_available">The REST API is not reachable.</string>
    <string name="error_run_query">The query failed: </string>
    <string name="error_run">An error occurred: </string>
    <string name="warning_direct_run">Direct queries can only be run in SQLite mode.</string>
    <string name="text_clipboard">Value copied to clipboard.</string>
    <string name="error_data">No data could be retrieved.</string>
    <string name="error_ai_save">No AI config was saved.</string>
    <string name="error_db_save">No Database config was saved.</string>
    <string name="warning_no_data">No results for this query.</string>
    <string name="error_db_load">The database couldn\'t be loaded, retry later.</string>
    <!--Maps-->
    <string name="text_mapping">Mapping database…</string>
    <string name="text_mapped">The database has been mapped.</string>
    <string name="text_map_delete">Do you want to delete the map of </string>
    <string name="text_map_deletion">Delete map</string>
    <string name="text_map_deletechoice">Delete</string>
    <string name="text_map_cancelchoice">Cancel</string>
    <string name="text_map_selected"> map selected for the next request.</string>
    <string name="error_nosqlite">No SQLite database was found.</string>
    <!--Config-->
    <string name="warning_api_override">REST API\'s AI settings will override.</string>
    <string name="warning_config_requirement">Selected section\'s fields must be filled.</string>
    <string name="text_saved">Settings saved.</string>
    <string name="error_sqlite_format">The file doesn\'t have the correct SQLite format.</string>
    <string name="error_file_check">: The file couldn\'t be checked.</string>
    <string name="error_sqlite_novalid">The selected file is not a valid SQLite database.</string>
    <string name="text_unsaved">Unsaved changes</string>
    <string name="warning_unsaved">You have unsaved changes, do you want to save them?\nData may not save if selected sections aren\'t fully filled.</string>
    <string name="text_save">Save</string>
    <string name="text_discard">Discard</string>
    <string name="error_file_format">The file path format is not a valid Android path.</string>
    <string name="error_ip_format">The IPv4 address doesn\'t have a valid format.</string>
    <string name="error_port_format">The port doesn\'t have a valid format.</string>
    <string name="error_gemini_format">The Gemini API Key doesn\'t have a valid format.</string>
    <string name="error_file_internal">An internal file error occurred: </string>
    <string name="error_format">Wrong formatted fields where emptied.</string>
    <string name="text_restart">Save &amp; restart</string>
    <string name="text_theme">Change theme</string>
    <string name="warning_theme">You need to restart in order to apply the selected theme, do you want to save your data?\nData may not save if selected sections aren\'t fully filled.</string>
</resources>