<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_run">

    <fragment
        android:id="@+id/navigation_run"
        android:name="com.luismisanve.langtosql.ui.run.RunFragment"
        android:label="@string/title_run"
        tools:layout="@layout/fragment_run" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.luismisanve.langtosql.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_config"
        android:name="com.luismisanve.langtosql.ui.config.ConfigFragment"
        android:label="@string/title_config"
        tools:layout="@layout/fragment_config" />
</navigation>